# neural-network-fpga

./: .gitignore  CMakeLists.txt  LICENSE  Logistic_regression.ipynb  README.md  decimal_to_binary.c  logreg_test2.c  memory_manipulation.c  readme.md  script.sh
CNN/: bmpchecker.c  bmpfile.c  bmpfile.h  bmpheader.h  bmphistogram.c  bmpimage.h  bmpmix.c  bmpunhide.c  cnn_filter_ex01.c  image
Floating_point_ANN/: Readme.md  ann.py  feature.c  main_tb.v  model_params_layer0.c  model_params_layer1.c  model_params_layer2.c  params_layer0.c  params_layer1.c  params_layer2.c  simple_ann.c  test_ann.py
Logistic_Reg_HLS_bambu/: 0_array_ref_33691.mem  0_array_ref_33765.mem  array_ref_33691.mem  array_ref_33765.mem  logistic_regression.c  logreg  main.v  main.xpr  main_tb.v  readme.md  run.sh  synthesize_Synthesis_main.sh  test  top.v
Simple 16_8_1 ANN/: Readme.md  feature.c  model_params_layer0.c  model_params_layer1.c  model_params_layer2.c  simple_NN_breast_cancer.ipynb  simple_ann.c
Simple 16_8_1 ANN/Generated_Verilog/: ann.vcd  array_ref_33767.mem  array_ref_33810.mem  array_ref_34309.mem  array_ref_34403.mem  array_ref_34421.mem  array_ref_34585.mem  main.v  main_tb.v  post_synth_utilization_report.txt  synthesize_Synthesis_main.sh  test
debug/: test_out.c
ieee_conversions/: floating_point_conversion.c
include/: network.h
src/: ann.c  ann.py  readme.md  script.pl
src/c/: a.out  ann.c  features.c  keras_predicted_features.c  network.h  network.h.gch  (+5 more)
verilog_Logistic_Regression/: logistic.v  logistic_test.v  ram_feature.mem  ram_weight.mem  readme.md
(+57 files in other folders)
